[project]
name = "dodoco-classifier"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.0"
dependencies = [
  "librosa>=0.11.0",
  "lightning>=2.5.2",
  "onnx>=1.18.0",
  "onnxruntime>=1.22.0",
  "onnxscript>=0.3.0",
  "soundfile>=0.13.1",
  "tensorboard>=2.19.0",
  "torch==2.7.0",
  "torchaudio==2.7.0",
  "torchlibrosa>=0.1.0",
  "torchvision==0.22.0",
]

[tool.uv.sources]
torch = [{ index = "pytorch-cu128" }]
torchvision = [{ index = "pytorch-cu128" }]
torchaudio = [{ index = "pytorch-cu128" }]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
